--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-   <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+   <link rel="stylesheet" href="./assets/css/contact.css">
    
     <title>Contact me</title>
 </head>
-<body style="background-image: url(./images/webb.png);"  class="body">
+<body style="background-image: url(./assets/images/webb.png);"  class="body">
     <div>
 
 
@@ -23,7 +23,7 @@
                     <li id="about" class="nav"><a href="./index.html">About</a></li>
                     <li id="portfolio"  class="nav"><a href="./portfolio.html">Portfolio</a></li>
                     <li id="con" class="nav"><a href="./contact.html">Contact</a></li>
-                    <li    class="MENU"><a href="#open"><img class="images" src="./images/download.png" alt=""></a></li>
+                    <li    class="MENU"><a href="#open"><img class="images" src="./assets/images/download.png" alt=""></a></li>
                 </ul>
             </form>
 
@@ -74,9 +74,9 @@
                       <div class="socialmedia">
                         <h3 class="h3">Connect with Me </h3>
                                 <div>
-                                    <a target="_blank" href="www.github.com"><img  class="img"  src="./images/github-128.png" alt="github"></a>
-                                     <a target="_blank" href="www.linkedin.com" ><img class="img" src="./images/linkedin-128.png" alt="linkedin"></a>
-                                     <a arget="_blank" href="www.stackoverflow.com"><img class="img" src="./images/stackoverflow-128.png" alt="stackoverflow"></a>
+                                    <a target="_blank" href="www.github.com"><img  class="img"  src="./assets/images/github-128.png" alt="github"></a>
+                                     <a target="_blank" href="www.linkedin.com" ><img class="img" src="./assets/images/linkedin-128.png" alt="linkedin"></a>
+                                     <a arget="_blank" href="www.stackoverflow.com"><img class="img" src="./assets/images/stackoverflow-128.png" alt="stackoverflow"></a>
                                 </div>
                         
                             
